fix: icon size overflowing wrapper which leads to uneven size day forecast

--- a/src/styles.css
+++ b/src/styles.css
@@ -107,9 +107,18 @@ a {
 
 .day-wrapper {
   align-items: center;
+  justify-content: space-between;
 }
 
 .day-temperature {
   justify-content: center;
   gap: 0.5rem;
+}
+
+.day-icon-wrapper {
+  text-align: center;
+}
+
+.day-icon-wrapper > img {
+  width: 100%;
 }
